--- a/src/addAccount.html
+++ b/src/addAccount.html
@@ -4,32 +4,82 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="/secure/authserver.js"></script>
+
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js" defer></script>
+    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js" defer></script>
+
+    <!-- Bootflat's JS files.-->
+    <script src="https://bootflat.github.io/bootflat/js/icheck.min.js" defer></script>
+    <script src="https://bootflat.github.io/bootflat/js/jquery.fs.selecter.min.js" defer></script>
+    <script src="https://bootflat.github.io/bootflat/js/jquery.fs.stepper.min.js" defer></script>
+
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootflat.github.io/bootflat/css/bootflat.css">
 </head>
 <body>
-<select id="accTypeSelect" onchange="changeAccountType(event.target.value)">
-    <option value="microsoft">Microsoft</option>
-    <option value="mojang">Mojang</option>
-    <option value="token">Token</option>
-</select>
 
-<div id="creator">
-    <a style="" class="acc_prop microsoft" id="msUrl" target="_blank">Microsoft url</a>
-    <input type="text" placeholder="code_username" class="acc_prop all" id="code_username" style="">
-    <input type="text" placeholder="code_password" class="acc_prop all" id="code_password" style="">
-    <input type="text" placeholder="username" class="acc_prop mojang" id="username" style="display: none;">
-    <input type="text" placeholder="password" class="acc_prop mojang" id="password" style="display: none;">
-    <input style="display:none" type="text" placeholder="token" class="acc_prop token" id="token">
-    <input style="" type="text" placeholder="code" class="acc_prop microsoft" id="code">
-    <button onclick="addAccountDOM()">ADD</button>
+<div class="panel">
+    <ul id="accountCreatorTabs" class="nav nav-tabs nav-justified">
+        <li onclick="changeAccountType('microsoft')" class="active"><a href="#microsoft" data-toggle="tab">Microsoft</a></li>
+        <li onclick="changeAccountType('mojang')" class=""><a href="#mojang" data-toggle="tab">Mojang</a></li>
+        <li onclick="changeAccountType('token')" class=""><a href="#token" data-toggle="tab">Token</a></li>
+    </ul>
+    <div id="accountCreatorContent" class="tab-content">
+        <div class="tab-pane fade active in" id="microsoft"></div>
+        <div class="tab-pane fade" id="mojang"></div>
+        <div class="tab-pane fade" id="token"></div>
+
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Property</th>
+                <th>Value</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr class="acc_prop_container all">
+                <td>Code Username</td>
+                <td><input type="text" placeholder="code_username" class="acc_prop all form-control" prop="code_username" style=""></td>
+            </tr>
+            <tr class="acc_prop_container all">
+                <td>Code Password</td>
+                <td><input type="password" placeholder="code_password" class="acc_prop all form-control" prop="code_password" style=""></td>
+            </tr>
+            <tr class="acc_prop_container mojang">
+                <td>Mojang Username</td>
+                <td><input type="text" placeholder="username" class="acc_prop mojang form-control" prop="username"></td>
+            </tr>
+            <tr class="acc_prop_container mojang">
+                <td>Mojang Password</td>
+                <td><input type="text" placeholder="password" class="acc_prop mojang form-control" prop="password"></td>
+            </tr>
+            <tr class="acc_prop_container token">
+                <td>Auth Token</td>
+                <td><input type="text" placeholder="token" class="acc_prop token form-control" prop="token"></td>
+            </tr>
+            <tr class="acc_prop_container microsoft">
+                <td></td>
+                <td><button onclick="openMSAuth()" class="btn btn-link btn-block">Authenticate with Microsoft to get Code</button></td>
+            </tr>
+            <tr class="acc_prop_container microsoft">
+                <td>Microsoft Code</td>
+                <td><input style="" type="text" placeholder="code" class="acc_prop microsoft form-control" prop="code"></td>
+            </tr>
+            <tr class="acc_prop_container all">
+                <td><button onclick="addAccountDOM()" class="btn btn-primary btn-block">Add</button></td>
+            </tr>
+            </tbody>
+        </table>
+
+    </div>
 </div>
 
 <script>
     let msUrl = "";
     fetch('/secure/authserver-msurl').then(r=>r.text()).then((r)=>{
         msUrl=r
-        document.querySelector('#msUrl').href = msUrl;
     })
-    changeAccountType(document.querySelector('#accTypeSelect').value)
+    changeAccountType(document.querySelector('#accountCreatorContent > div.active').id)
 </script>
 </body>
 </html>
