move endpoints from /secure to /

--- a/src/accountManager.html
+++ b/src/accountManager.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Minecraft Authserver</title>
-    <script src="/secure/authserver.js"></script>
+    <script src="/authserver.js"></script>
 
     <style>
         .account_icon {
