--- a/src/accountView.html
+++ b/src/accountView.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="/secure/authserver.js"></script>
+    <script src="/authserver.js"></script>
 
     <script src="https://code.jquery.com/jquery-1.11.0.min.js" defer></script>
     <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js" defer></script>
