fix iframe container style

--- a/src/accountManager.html
+++ b/src/accountManager.html
@@ -44,7 +44,7 @@
     </table>
 </div>
 
-<div id="iframe_container" style="position: absolute; top:0;left:0;width: 100%;height: 100%;background-color: #00000061; display: none">
+<div id="iframe_container" style="position: fixed; top:0;left:0;width: 100%;height: 100%;background-color: #00000061; display: none">
     <div class="panel panel-default" style="position: absolute; display: block; top: 10%; left: 10%; background-color: white;width: 80%;height: 80%;">
         <div class="panel-heading">
             <h3 class="panel-title"><span id="iframe-panel-title-text"></span><div onclick="openIframe('')" style="float:right">X</div></h3>
