Add code endpoint

--- a/src/addAccount.html
+++ b/src/addAccount.html
@@ -59,7 +59,7 @@
             </tr>
             <tr class="acc_prop_container microsoft">
                 <td></td>
-                <td><a class="btn btn-link btn-block" id="a-msauth">Authenticate with Microsoft to get Code</a></td>
+                <td><a target="_blank" class="btn btn-link btn-block" id="a-msauth">Authenticate with Microsoft to get Code</a></td>
             </tr>
             <tr class="acc_prop_container microsoft">
                 <td>Microsoft Code</td>
